Address various compiler warnings
Signed-off-by: nscuro <nscuro@protonmail.com>