@@ -38,11 +38,13 @@ import org.dependencytrack.notification.NotificationGroup;
 import org.dependencytrack.notification.NotificationScope;
 import org.dependencytrack.parser.epss.EpssParser;
 import org.dependencytrack.persistence.QueryManager;
+
 import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.util.zip.GZIPInputStream;
@@ -129,7 +131,7 @@ public class EpssMirrorTask implements LoggableSubscriber {
     private void doDownload(final String urlString) {
         File file;
         try {
-            final URL url = new URL(urlString);
+            final URL url = URI.create(urlString).toURL();
             String filename = url.getFile();
             filename = filename.substring(filename.lastIndexOf('/') + 1);
             file = new File(outputDir, filename).getAbsoluteFile();
